--- a/metadata.yaml
+++ b/metadata.yaml
@@ -42,5 +42,6 @@ subjects:
 - !lcsh 'Historical fiction'
 - !lcc 'PS'
 - !lcsh 'United States -- History -- 1815-1861 -- Fiction'
+- GITenberg
 title: 54-40 or Fight
 url: http://www.gutenberg.org/ebooks/14355
